Fix #483